record search fix

--- a/templates/carstore/record_search_results.html
+++ b/templates/carstore/record_search_results.html
@@ -5,7 +5,7 @@
 {% block content %}
 <h1>Search Results</h1>
 
-  <form class="form-inline mt-2 mt-md-0" action="{% url 'car_model_search_results' %}" method="get">
+  <form class="form-inline mt-2 mt-md-0" action="{% url 'record_search_results' %}" method="get">
     <input name="q" class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
   </form>
 
