--- a/templates/carstore/car_model_list.html
+++ b/templates/carstore/car_model_list.html
@@ -13,12 +13,13 @@
   <br>
 
     <table class="table">
-      <tr><th>ID</th><th>Car model</th><th>Brand</th></tr>
+      <tr><th>ID</th><th>Car model</th><th>Brand</th><th>Price</th></tr>
       {% for c in car_models %}
         <tr>
           <td>{{ c.id }}</td>
-          <td>{{ c.name }}</td>
+          <td><a href="{%  url "car_model_detail" c.id %}">{{ c.name }}</a></td>
           <td>{{ c.brand }}</td>
+          <td>${{ c.price }}</td>
         </tr>
       {% endfor %}
     </table>
