--- a/templates/carstore/car_model_search_results.html
+++ b/templates/carstore/car_model_search_results.html
@@ -3,6 +3,7 @@
 {% block title %}Search{% endblock title %}
 
 {% block content %}
+
 <h1>Search Results</h1>
 
   <form class="form-inline mt-2 mt-md-0" action="{% url 'car_model_search_results' %}" method="get">
@@ -13,15 +14,21 @@
 
 
 <div>
-  <table class="table">
-    <tr><th>ID</th><th>Car model</th><th>Brand</th></tr>
-      {% for c in car_models %}
-        <tr>
-          <td>{{ c.id }}</td>
-          <td>{{ c.name }}</td>
-          <td>{{ c.brand }}</td>
-        </tr>
-      {% endfor %}
-    </table>
+  {% if car_models %}
+    <table class="table">
+      <tr><th>ID</th><th>Car model</th><th>Brand</th><th>Price</th></tr>
+        {% for c in car_models %}
+          <tr>
+            <td>{{ c.id }}</td>
+            <td>{{ c.name }}</td>
+            <td>{{ c.brand }}</td>
+            <td>${{ c.price }}</td>
+          </tr>
+        {% endfor %}
+      </table>
+  {% else %}
+    <h3>No car models found.</h3>
+  {% endif %}
 </div>
+  
 {% endblock content %}
