--- a/templates/orders/order_list.html
+++ b/templates/orders/order_list.html
@@ -10,7 +10,7 @@
   <h1>Orders</h1>
     <br>
     <table class="table">
-      <tr><th>ID</th><th>Employee</th><th>Firm</th><th>Created at</th><th>Updated at</th></tr>
+      <tr><th>ID</th><th>Employee</th><th>Firm</th><th>Created at</th><th>Updated at</th><th>Total</th></tr>
       {% for o in orders %}
         <tr>
           <td><a href="{% url 'order_detail' o.pk %}">{{ o.id }}</a></td>
@@ -18,6 +18,7 @@
           <td>{{ o.firm }}</td>
           <td>{{ o.created_at }}</td>
           <td>{{ o.updated_at }}</td>
+          <td>${{ o.total_price }}</td>
         </tr>
       {% endfor %}
     </table>
